# vid-insp

./: .env.example  .gitignore  README.md  docker-compose.yml
compiler/: Dockerfile  pyproject.toml
compiler/compiler/: __init__.py  cli.py  config.py  gc.py  main.py  registry.py
compiler/compiler/db/: migrate.py  models.py  session.py
compiler/compiler/db/migrations/: 001_sessions.sql
compiler/compiler/routes/: sessions.py
compiler/compiler/services/: sessions.py
compiler/compiler/stages/: stage_a.py  stage_c.py  stage_r.py
compiler/tests/: conftest.py  test_api.py  test_approval_flow.py  test_cli.py  test_gc.py  test_registry.py  test_stage_a.py  test_stage_c.py  test_stage_r.py  test_validator.py
compiler/tests/fixtures/: hospital_fall_risk.txt  kitchen_hygiene.txt  warehouse_ppe.txt
examples/: warehouse.yaml
runtime/: Dockerfile  docker-compose.test.yml  docker-compose.yml  pyproject.toml
runtime/runtime/: __init__.py  boot.py  cli.py  clock.py  config.py  exceptions.py  gates.py  main.py
runtime/runtime/api/: routes.py
runtime/runtime/camera/: failure.py  sampler.py  snapshot_cache.py
runtime/runtime/db/: pool.py
runtime/runtime/db/migrations/: 001_runtime.sql
runtime/runtime/engine/: buffer.py  cadence.py  dispatcher.py  orchestrator.py  rules.py  url_safety.py
runtime/runtime/observability/: alerts.py  cost.py  health.py  log.py  retention.py
runtime/runtime/vlm/: client.py  coercion.py  encoder.py
runtime/tests/: conftest.py  test_api.py  test_buffer.py  test_cadence.py  test_coercion.py  test_dispatcher.py  test_encoder.py  test_gates.py  test_orchestrator.py  test_pr_review_fixes.py  test_retention.py  test_rules.py  test_sampler_heartbeat.py  test_snapshot_cache.py  test_validator.py
runtime/tests/fixtures/: mediamtx.yml
shared/: pyproject.toml
shared/scripts/: export_jsonschema.py
shared/shared/: __init__.py  llm_client.py
shared/shared/dsl/: __init__.py  schema.py  validator.py
shared/tests/: conftest.py  test_llm_client.py  test_schema.py  test_validator.py
shared/vlm_inspector_shared/: __init__.py  llm_client.py
shared/vlm_inspector_shared/dsl/: __init__.py  jsonschema.json  schema.py  validator.py
shared/vlm_inspector_shared/dsl/migrations/: 001_initial.sql
shared/vlm_inspector_shared/prompts/: __init__.py  prompt_engineering_rules.md
ui/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.stub  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
ui/src/: middleware.ts
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/app/api/auth/login/: route.ts
ui/src/app/api/auth/logout/: route.ts
ui/src/app/api/compiler/[...path]/: route.ts
ui/src/app/api/runtime/[...path]/: route.ts
ui/src/app/inspections/: page.tsx
ui/src/app/inspections/[id]/: layout.tsx  page.tsx
ui/src/app/inspections/[id]/cameras/: page.tsx
ui/src/app/inspections/[id]/channels/: page.tsx
ui/src/app/inspections/[id]/deploy/: page.tsx
ui/src/app/inspections/[id]/intents/: page.tsx
ui/src/app/inspections/[id]/preview/: page.tsx
ui/src/app/inspections/[id]/questions/: page.tsx
ui/src/app/inspections/[id]/rules/: page.tsx
ui/src/app/inspections/new/: page.tsx
ui/src/app/login/: page.tsx
ui/src/app/monitor/: page.tsx
ui/src/app/monitor/[deployment_id]/: page.tsx
ui/src/components/monitor/: alerts-table.tsx  camera-grid.tsx  cost-meter.tsx  health-panel.tsx  status-bar.tsx
ui/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  select.tsx  textarea.tsx  toast.tsx  tooltip.tsx
ui/src/components/wizard/: intent-card.tsx  question-card.tsx  rule-card.tsx  wizard-shell.tsx
ui/src/lib/: types.ts  utils.ts
ui/src/lib/api-client/: compiler.ts  http.ts  runtime.ts
ui/stubs/: compiler-stub.ts  runtime-stub.ts
ui/stubs/fixtures/: inspections.ts
ui/tests/: api-client.test.ts  msw-server.ts  setup.ts
ui/tests/e2e/: wizard.spec.ts
