[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm_runtime"
version = "0.1.0"
description = "Runtime service: DSL → VLM perception → temporal rules → alerts."
requires-python = ">=3.11"
dependencies = [
    "vlm_inspector_shared",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "asyncpg>=0.29",
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "openai>=1.30",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "anyio>=4.3",
]

[project.scripts]
vlm-runtime = "runtime.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
