[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm_inspector_shared"
version = "0.1.0"
description = "Shared schema, validators, and LLM client for the VLM Inspector platform."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "openai>=1.30",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]
